// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Renders a Header component in dev profile with LoadingBar, Navbar, Nav and dev ribbon. 1`] = `
<Fragment>
  <div
    className="ribbon dev"
  >
    <a
      href=""
    >
      <Translate
        component="span"
        contentKey="global.ribbon.dev"
      />
    </a>
  </div>
  <Connect(LoadingBar)
    className="loading-bar"
  />
  <ForwardRef($cb4e2cb36ae5e3ab01f62ab7d1672c67$var$View)
    backgroundColor="static-black"
    padding="size-150"
  >
    <header>
      <ForwardRef($e9098d18abf2a118bc3bc95f0d402bb5$var$Flex)
        justifyContent="space-between"
      >
        <ForwardRef($e9098d18abf2a118bc3bc95f0d402bb5$var$Flex)
          alignItems="center"
          justifyContent="center"
        >
          <Logo />
        </ForwardRef($e9098d18abf2a118bc3bc95f0d402bb5$var$Flex)>
        <ForwardRef($e9098d18abf2a118bc3bc95f0d402bb5$var$Flex)
          alignItems="end"
        >
          <RealmSwitcher />
          <Notifications />
          <DataStudioAvatar />
        </ForwardRef($e9098d18abf2a118bc3bc95f0d402bb5$var$Flex)>
      </ForwardRef($e9098d18abf2a118bc3bc95f0d402bb5$var$Flex)>
    </header>
  </ForwardRef($cb4e2cb36ae5e3ab01f62ab7d1672c67$var$View)>
</Fragment>
`;

exports[`Header Renders a Header component in prod profile with LoadingBar, Navbar, Nav. 1`] = `
<Fragment>
  <Connect(LoadingBar)
    className="loading-bar"
  />
  <ForwardRef($cb4e2cb36ae5e3ab01f62ab7d1672c67$var$View)
    backgroundColor="static-black"
    padding="size-150"
  >
    <header>
      <ForwardRef($e9098d18abf2a118bc3bc95f0d402bb5$var$Flex)
        justifyContent="space-between"
      >
        <ForwardRef($e9098d18abf2a118bc3bc95f0d402bb5$var$Flex)
          alignItems="center"
          justifyContent="center"
        >
          <Logo />
        </ForwardRef($e9098d18abf2a118bc3bc95f0d402bb5$var$Flex)>
        <ForwardRef($e9098d18abf2a118bc3bc95f0d402bb5$var$Flex)
          alignItems="end"
        >
          <RealmSwitcher />
          <Notifications />
          <DataStudioAvatar />
        </ForwardRef($e9098d18abf2a118bc3bc95f0d402bb5$var$Flex)>
      </ForwardRef($e9098d18abf2a118bc3bc95f0d402bb5$var$Flex)>
    </header>
  </ForwardRef($cb4e2cb36ae5e3ab01f62ab7d1672c67$var$View)>
</Fragment>
`;
